Changes to the navigation bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 <body>
+    <!-- HEADER CONTAINER, TEXT AND CONTACT BUTTON-->
     <nav> <!-- This is the navigation container. -->
         <img src="images/menu-logo.png" class="menu-img">
         <img src="images/logo.png" class="logo">
@@ -27,15 +28,12 @@
         <button class="contact-button" type="button"> Contacto </button>
     </nav>
 
-    <div class="hero">
-        <div class='hero-container'>
-            <img src="images/construction.jpeg" class="construction-img">
-            <div class="text-container">
-                <h1> Construimos para ti</h1>
-                <p> Nos respaldan mas de 100 clientes satisfechos y 5 años de experiencia</p>
-            </div>
-        </div>            
-    </div>  
+    <div class="hero-image-container">
+        <img src = "images/construction-hero-photo.jpg" alt="Construction Image" >
+    </div>
+
+
+
 </body>
 
 
