changed nav bar

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
 <body>
     <!-- HEADER CONTAINER, TEXT AND CONTACT BUTTON-->
     <nav> <!-- This is the navigation container. -->
-        <img src="images/menu-logo.png" class="menu-img">
         <img src="images/logo.png" class="logo">
-        <ul class = "nav-link"> <!-- An unordered list inside the <nav> -->
+        <ul class = "nav-link"> <!-- An unordered list inside the <nav> --> 
             <li> <a href=""> Nosotros </a> </li> <!-- List element inside the ul-->
-            <li> <a href=""> Proyectos </a> </li>
-            <li> <a href="">  Servicios</a> </li>
+            <li> <a href=""> Construccion </a> </li>
+            <li> <a href="">  Mantenimiento</a> </li>
+            <button class="contact-button" type="button"> Contacto </button>
         </ul>
-        <button class="contact-button" type="button"> Contacto </button>
+        
     </nav>
+
+    
 
     <div class="hero-image-container">
         <img src = "images/construction-hero-photo.jpg" alt="Construction Image" >
